# quartz-canvas

./: .gitignore  QUARTZ_CANVAS_BUILD.md  README.md  index.html  package-lock.json  package.json
public/: splash.html
skills/: apple-ui.md  desktop-product-ui.md  editorial-ui.md  minimalist-ui.md  semi-flat-ui.md  user-skill-authoring.md  web-creative-ui.md
src/: App.tsx  main.tsx  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  bootstrap.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/ai/: chat.rs  hugging_face.rs  local_models.rs  mod.rs  model_profiles.rs  model_runtime.rs  orchestrator.rs  prism_runtime.rs  provider_config.rs
src-tauri/src/commands/: ai.rs  auth.rs  dev_server.rs  diagnostics.rs  indexer.rs  mod.rs  patch.rs  preview.rs  project.rs
src-tauri/src/context/: mod.rs
src-tauri/src/dev_server/: command.rs  logs.rs  mod.rs  supervisor.rs
src-tauri/src/diagnostics/: mod.rs  service.rs
src-tauri/src/domain/: ids.rs  mod.rs
src-tauri/src/fs/: atomic_write.rs  content_hash.rs  mod.rs  safe_path.rs
src-tauri/src/indexer/: mod.rs  source_index.rs
src-tauri/src/patch/: diff.rs  mod.rs  model.rs  paths.rs  service.rs  validate.rs
src-tauri/src/project/: detect.rs  lifecycle.rs  mod.rs
src-tauri/src/runtime/: blocking.rs
src-tauri/src/security/: mod.rs  redaction.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs
src/auth/: AuthContext.tsx  AuthGate.tsx  commands.ts  useAuth.ts
src/contracts/: ai.ts  common.ts  ids.ts  index.ts  patch.ts  (+3 more)
(+44 files in other folders)
