[package]
name = "quartz-canvas"
version = "0.1.0"
description = "Quartz Canvas native core"
authors = ["Quartz Canvas"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "quartz_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quartz-canvas"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
camino = { version = "=1.1.9", features = ["serde1"] }
chrono = { version = "=0.4.38", default-features = false, features = ["clock", "serde"] }
futures-core = "=0.3.31"
hex = "=0.4.3"
home = "=0.5.9"
indexmap = "=2.7.0"
regex = "=1.11.1"
reqwest = { version = "=0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.8"
sqlx = { version = "=0.8.2", default-features = false, features = ["chrono", "json", "runtime-tokio-rustls", "sqlite", "uuid"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
thiserror = "=1.0.69"
tokio = { version = "=1.40.0", features = ["fs", "io-util", "macros", "net", "process", "rt", "sync", "time"] }
tokio-util = "=0.7.12"
url = { version = "=2.5.2", features = ["serde"] }
uuid = { version = "=1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "=3.13.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
